# CEP

./: .gitignore  LICENSE  Makefile  NOTICE  README.md  meson.build  meson_options.txt
docs/: BUILD.md  CEP-CONTRACTS.md  CEP-FOR-PL-SQL-DEVS.md  CEP-Implementation-Reference.md  CEP-Learning-Approach.md  CEP-TAG-LEXICON.md  CEP.md  CEP.txt  DEBUG-MACROS.md  DOCS-INDEX.md  DOCS-ORIENTATION-GUIDE.md  Doxyfile.in  GLOSSARY.md  IO-STREAMS-AND-FOREIGN-RESOURCES.md  LAYER-BOOTSTRAP-POLICY.md  LICENSING.md  RATWORLD.md  ROOT-DIRECTORY-LAYOUT.md  TEST-WATCHDOG-GUIDE.md  TOOLS.md
docs/L0_KERNEL/: APPEND-ONLY-AND-IDEMPOTENCY.md  CELL-BOUND-ENZYME-BINDINGS.md  DEVELOPER-HANDBOOK.md  HEARTBEAT-AND-ENZYMES.md  L0-ALGORITHMS.md  L0-INTEGRATION-GUIDE.md  L0-OVERVIEW.md  L0-TUNING-NOTES.md  L0_ROADMAP.md  LINKS-AND-SHADOWING.md  LOCKING.md  NATIVE-TYPES.md  PROXY-CELLS.md  ROOT-DIRECTORY-LAYOUT.md  SERIALIZATION-AND-STREAMS.md
docs/L0_KERNEL/design/: DESIGN-INDEX.md  L0-DESIGN-ASYNC-IO.md  L0-DESIGN-CEI.md  L0-DESIGN-CELL-AND-STORE.md  L0-DESIGN-CPS.md  L0-DESIGN-E3-EPISODIC-ENGINE.md  L0-DESIGN-ENCLAVE.md  L0-DESIGN-FEDERATION.md  L0-DESIGN-GUIDE.md  L0-DESIGN-HEARTBEAT-AND-OPS.md  L0-DESIGN-MAILBOX-LIFECYCLE.md  L0-DESIGN-NAMEPOOL-AND-NAMING.md  L0-DESIGN-ORGANS-AND-LIFECYCLE.md  L0-DESIGN-PAUSE-AND-ROLLBACK.md  L0-DESIGN-PROXY-AND-HANDLES.md  L0-DESIGN-SERIALIZATION.md
docs/L0_KERNEL/topics/: APPEND-ONLY-AND-IDEMPOTENCY.md  CACHE-AND-CONTROLLERS.md  CEI.md  CELL-BOUND-ENZYME-BINDINGS.md  CELL-OPERATIONS-ENZYMES.md  DEBUG-MACROS.md  DEVELOPER-HANDBOOK.md  E3-EPISODIC-ENGINE.md  ENCLAVE-OPERATIONS.md  EXTERNAL-LIBRARIES-INTERFACE.md  FEDERATION-TRANSPORT.md  GLOB-MATCHING.md  HEARTBEAT-AND-ENZYMES.md  IO-STREAMS-AND-FOREIGN-RESOURCES.md  LINKS-AND-SHADOWING.md  LOCKING.md  MAILBOX-CEI-MAPPING.md  MAILBOX-LIFECYCLE.md  MAILROOM-AND-MAILBOXES.md  NATIVE-TYPES.md  ORGANS-AUTHORING.md  PIPELINES-AND-HYDRATION.md  PROXY-CELLS.md  RAW-TRAVERSAL-HELPERS.md  RENDEZVOUS-AND-THREADING.md  SERIALIZATION-AND-STREAMS.md  STARTUP-AND-SHUTDOWN.md
docs/L0_Kernel/: APPEND-ONLY-AND-IDEMPOTENCY.md  CELL-BOUND-ENZYME-BINDINGS.md  DEVELOPER-HANDBOOK.md  EXTERNAL-LIBRARIES-INTERFACE.md  HEARTBEAT-AND-ENZYMES.md  IO-STREAMS-AND-FOREIGN-RESOURCES.md  L0_ROADMAP.md  LINKS-AND-SHADOWING.md  NATIVE-TYPES.md  PROXY-CELLS.md  ROOT-DIRECTORY-LAYOUT.md  SERIALIZATION-AND-STREAMS.md
docs/L1_BOND/: L1-ALGORITHMS.md  L1-INTEGRATION-GUIDE.md  L1-OVERVIEW.md  L1-TUNING-NOTES.md  L1_ROADMAP.md
docs/L1_BOND/topics/: ADJACENCY-MIRRORS.md  BEINGS-AND-IDENTITY.md  BONDS-AND-CONTEXTS.md  CHECKPOINTS-AND-RETRIES.md  EXAMPLE-EDIT-CONTEXT.md  FACETS-AND-CLOSURE.md
docs/L1_BOUND/: BONDS-AND-CONTEXTS.md  EXAMPLE-EDIT-CONTEXT.md  OVERVIEW.md
docs/L1_COHERENCE/: ADJACENCY-CLOSURE.md  L1-ADJACENCY-CLOSURE.md  L1-ALGORITHMS.md  L1-IMPLEMENTATION.md  L1-INTEGRATION-GUIDE.md  L1-OVERVIEW.md  L1-ROADMAP.md  L1-USAGE.md  README.md
docs/L2_ECOLOGY/: IMPLEMENTATION.md  L2-IMPLEMENTATION.md  L2-OVERVIEW.md  README.md
docs/L2_FLOW/: L2-ALGORITHMS.md  L2-INTEGRATION-GUIDE.md  L2-OVERVIEW.md  L2-ROADMAP.md  L2-TELEMETRY.md
docs/L3_AWARENESS/: L3-OVERVIEW.md
docs/L4_GOVERNANCE/: L4-OVERVIEW.md
fixtures/cps/cas/: payload_ref_cas_deflate.blob  payload_ref_cas_plain.blob
fixtures/cps/frames/: payload_ref_cas_deflate.frame  payload_ref_cas_plain.frame  (+1 more)
src/: BUILD.md
src/cps/: cps_engine.h  cps_flatfile.c  cps_flatfile.c.bak  cps_flatfile.h  cps_runtime.c  cps_runtime.h  cps_storage_service.c  cps_storage_service.h
src/enzymes/: cep_bond_operations.c  cep_bond_operations.h  cep_cell_operations.c  cep_cell_operations.h  cep_l0_organs.c  cep_l0_organs.h  cep_l1_coherence.c  cep_l1_coherence.h  cep_l2_flows.c  cep_l2_flows.h  cep_poc_pack.c  cep_poc_pack.h  cep_rendezvous.c  cep_rendezvous.h  fed_invoke.c  fed_invoke.h  fed_link_organ.c  fed_link_organ.h  fed_mirror_organ.c  fed_mirror_organ.h  fed_pack.c  fed_pack.h  fed_schema_helpers.h  fed_transport.c  fed_transport.h  fed_transport_manager.c  fed_transport_manager.h  fed_transport_providers.c  fed_transport_providers.h  sec_pipeline.c  sec_pipeline.h
src/l0_kernel/: cep_async.c  cep_async.h  cep_branch_controller.c  cep_branch_controller.h  cep_cei.c  cep_cei.h  cep_cell.c  cep_cell.h  cep_cell_stream.c  cep_cell_system.c  cep_crc32c.c  cep_crc32c.h  cep_enclave_policy.c  cep_enclave_policy.h  cep_enzyme.c  cep_enzyme.h  cep_enzyme_bindings.c  cep_ep.c  cep_ep.h  cep_error.c  cep_error.h  cep_executor.c  cep_executor.h  cep_flat_helpers.c  cep_flat_helpers.h  cep_flat_serializer.c  cep_flat_serializer.h  cep_flat_stream.c  cep_flat_stream.h  cep_heartbeat.c  cep_heartbeat.h  cep_heartbeat_internal.h  cep_heartbeat_queue.c  cep_identifier.c  cep_identifier.h  cep_io_reactor.c  cep_io_reactor.h  cep_l0.c  cep_l0.h  cep_mailbox.c  (+20 more)
src/l1_bond/: cep_bond.c  cep_bond.h  cep_bond_being.c  cep_bond_common.c  cep_bond_context.c  cep_bond_facet.c  cep_bond_internal.h  cep_bond_pair.c  cep_bond_tick.c  cep_bond_topology.c
src/l1_coherence/: cep_l1_coherence.c  cep_l1_coherence.h  cep_l1_pack.c  cep_l1_pack.h  cep_l1_pipelines.c  cep_l1_pipelines.h  cep_l1_runtime.c  cep_l1_runtime.h  cep_l1_schema.c  cep_l1_schema.h
src/l2_ecology/: cep_l2_flow.c  cep_l2_flow.h  cep_l2_focus.c  cep_l2_focus.h  cep_l2_pack.c  cep_l2_pack.h  cep_l2_playbook.c  cep_l2_playbook.h  cep_l2_runtime.c  cep_l2_runtime.h  cep_l2_schema.c  cep_l2_schema.h
src/l3_awareness/: cep_l3_runtime.c  cep_l3_runtime.h
src/l4_governance/: cep_l4_runtime.c  cep_l4_runtime.h
src/ratworld/: ratworld.c  ratworld.h  ratworld_text.c  ratworld_text.h
src/test/: munit.c  test.c  test.h  test_cell.c  test_enzyme.c  test_heartbeat.c  test_serialization.c  test_stream.c  test_stream_zip.c  test_traverse.c  test_wordacron.c  watchdog.c  watchdog.h
toolchains/: clang.meson
tools/: capture-fixtures.sh  check_docs_structure.py  check_unused_tags.py  cps_save_load.c  fix_doxygen_toc.py  generate_code_map.py  git_tag_version.py  run_doxygen.py  run_dual_runtime_federation.sh  valgrind.supp
unix/: Makefile
(+72 files in other folders)
