option('asan', type: 'boolean', value: false, description: 'Enable Address/UB sanitizers')
option('tests', type: 'feature', value: 'enabled', description: 'Build unit tests')
option('server', type: 'feature', value: 'disabled', description: 'Build standalone CEP server')
option('both_libs', type: 'boolean', value: false, description: 'Build both static and shared libraries')
option('zip', type: 'feature', value: 'auto', description: 'Enable libzip-backed stream adapter')
