option('asan', type: 'boolean', value: false, description: 'Enable Address/UB sanitizers')
option('code_map', type: 'boolean', value: false, description: 'Generate ctags+cscope mapping artifacts')
option('docs_html', type: 'boolean', value: false, description: 'Build HTML docs with Doxygen + Graphviz')
option('tests', type: 'feature', value: 'enabled', description: 'Build unit tests')
option('server', type: 'feature', value: 'disabled', description: 'Build standalone CEP server')
option('both_libs', type: 'boolean', value: false, description: 'Build both static and shared libraries')
option('zip', type: 'feature', value: 'auto', description: 'Enable libzip-backed stream adapter')
option('executor_backend', type: 'combo', choices: ['stub', 'threaded'], value: 'stub', description: 'Select executor backend implementation')
option('io_reactor_backend', type: 'combo', choices: ['auto', 'portable', 'epoll'], value: 'auto', description: 'Select default async I/O reactor backend')
option('zlib_provider', type: 'combo', choices: ['auto', 'system', 'bundled'], value: 'auto', description: 'Prefer system zlib when available; fall back to bundled CRC32 copy')
option('libsodium_provider', type: 'combo', choices: ['auto', 'system', 'bundled'], value: 'auto', description: 'Prefer system libsodium when available; fall back to a bundled subset')
option('l3_awareness', type: 'feature', value: 'enabled', description: 'Build optional Layer 3 awareness pack')
option('l4_governance', type: 'feature', value: 'enabled', description: 'Build optional Layer 4 governance pack')
